--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ body{
 .container{
     width: 400px;
     height: 520px;
-    /* background-color: lightgray; */
     padding: 20px;
     border-radius: 4px;
     display: flex;
@@ -54,6 +53,8 @@ body{
     text-transform: capitalize;
     color: lightgrey;
 }
+
+
 .password-container button{
     outline: 0;
     border: 0;
@@ -134,4 +135,11 @@ body{
     font-size: 0.9rem;
     font-weight: 600;
     text-transform: capitalize;
+}
+
+
+@media screen and (max-width: 600px){
+    .password-container h1{
+        font-size: 1.2rem;
+    }
 }
